auto movement working somewhat now

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -28,4 +28,6 @@ dependencies {
 
 dependencies {
     implementation 'org.openftc:easyopencv:1.5.1'
+
+    implementation 'com.acmerobotics.roadrunner:core:0.5.3'
 }
