--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -28,5 +28,6 @@ dependencies {
 
 dependencies {
     implementation 'org.openftc:easyopencv:1.5.1'
-    implementation 'com.acmerobotics.roadrunner:core:0.5.3'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.4'
 }
